flux/apps/cluster1/vdo-ninja/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vdo-ninja
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vdo-ninja
      app.kubernetes.io/part-of: vdo-ninja
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vdo-ninja
        app.kubernetes.io/part-of: vdo-ninja
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: vdo-ninja.cluster.local/schedulable
                operator: In
                values:
                - "true"
      tolerations:
      - effect: NoSchedule
        key: node.kubernetes.io/unschedulable
        operator: Exists
      hostNetwork: true
      containers:
      - image: docker-registry.wugi.info/library/vdo.ninja:latest
        name: vdo-ninja
        ports:
        - containerPort: 443
          name: https
          protocol: TCP
        resources:
          limits:
            cpu: 2000m
            memory: 1024Mi
          requests:
            cpu: 1000m
            memory: 512Mi
        volumeMounts:
        - name: certs
          mountPath: /var/vdo/vdo.ninja/cert.pem
          subPath: tls.crt
          readOnly: true
        - name: certs
          mountPath: /var/vdo/vdo.ninja/key.pem
          subPath: tls.key
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: vdo-ninja-certs
