flux/apps/cluster1/vdo-ninja/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vdo-ninja
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vdo.socialstream.ninja.home.wugi.info
    secretName: vdo-ninja-ingress-certs
  rules:
  - host: vdo.socialstream.ninja.home.wugi.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: vdo-ninja
            port:
              number: 80
